Fixes spacing for phone of header after 'check mark'

--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -204,11 +204,16 @@ div.faq p	{
 
 .check	{
 	float: left;
-	margin: 5px 8px 0 0;
+	margin: 5px 11px 18px 0;
 }
 
 div.features p	{
 	margin-left: 2.6em;
+}
+
+div.features h2	{
+	margin-bottom: .2em;
+	line-height: 1.05em;
 }
 
 .carousel	{
